[gd_scene load_steps=2 format=3 uid="uid://c4q7skpmltk8l"]

[ext_resource type="Script" path="res://scenes/gui/main_menu.gd" id="1_yla67"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yla67")

[node name="ListenerFailedLabel" type="Label" parent="."]
visible = false
layout_mode = 1
offset_right = 230.0
offset_bottom = 23.0
text = "Failed to bind to listener port!"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0429688
anchor_top = 0.2
anchor_right = 0.422656
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="SingleplayerButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Singleplayer
"

[node name="AddressEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="NameEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Your Display Name"
alignment = 1

[node name="ServerInfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44375
anchor_top = 0.211111
anchor_right = 0.982032
anchor_bottom = 0.822222
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ServerInfoLabels" type="HBoxContainer" parent="ServerInfoContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="ServerInfoContainer/ServerInfoLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="IP" type="Label" parent="ServerInfoContainer/ServerInfoLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP"

[node name="PlayerCount" type="Label" parent="ServerInfoContainer/ServerInfoLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Count
"

[node name="JoinColumnSpacer" type="Control" parent="ServerInfoContainer/ServerInfoLabels"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
